Database on Travis tests properly with sample data.

--- a/.env.travis
+++ b/.env.travis
@@ -3,4 +3,5 @@ PGHOST=localhost
 PGPASSWORD=""
 PGDATABASE=scheduler
 PGPORT=5432
-NODE_ENV=development
+
+postgres://postgres:""@localhost:5432/scheduler
